--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-frontload": "^1.0.2",
+    "react-helmet": "^5.2.0",
     "react-loadable": "^5.5.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
