--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.8.4",
     "connected-react-router": "^4.4.1",
+    "cookie-parser": "^1.4.3",
+    "forcedomain": "^1.0.0",
     "history": "^4.7.2",
+    "ignore-styles": "^5.0.1",
     "js-cookie": "^2.2.0",
+    "md5-file": "^4.0.0",
+    "morgan": "^1.9.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-frontload": "^1.0.2",
@@ -21,6 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "precommit": "lint-staged",
+    "serve": "NODE_ENV=production node ./server/index.js"
   }
 }
